fix for reference overflow

--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -367,10 +367,6 @@ div.smart-tag.active {
     word-wrap: normal;
 }
 
-#refFilter p {
-    max-height: 26px;
-}
-
 #refFilter {
     transition-property: all !important;
     transition: width 250ms ease-out;
